--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     </Main>
     <h1> Example homepage </h1>
     <p> this is some text in paragraph </p>
+
+<figure> <img src="images/WWW.jpg" alt=""> </figure>
+ 
     <footer> This is optional, it is footer information that would appear at the bottome of the page.</footer>
+
 </body>
 </html>
